# nativeApp

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  INSTALL.md  README.md  build-release.bat  main.js  package.json  plugin.manifest.yaml  start-dev-nowdac-electron.bat  start-dev-nowdac.bat  start-dev-tauri.bat  start-dev.bat  start-fleet.bat  start-prod.bat  start-trusted.bat
.cursor/rules/: 00-setup.mdc
.github/: copilot-instructions.md
apps/host-electron/: launch-electron.js  package.json
apps/host-tauri/: .gitignore  SIGNING.md  package-lock.json  package.json
apps/host-tauri/src-tauri/: Cargo.toml  cimhost-shim.js  tauri.conf.json
apps/host-tauri/src-tauri/capabilities/: default.json
apps/host-tauri/src-tauri/icons/: icon.icns
apps/host-tauri/src-tauri/src/: bridge.rs  lib.rs  main.rs  sidecar.rs
apps/host-tauri/src-tauri/tests/: sidecar_tests.rs
config/: tools.sqlite
docs/: AI4BI_INTEGRATION.md  AI_CONTEXT.md  ANNOTATION_XANYLABELING.md  ARCHITECTURE.md  INSTALL.md  MODULES.md  README.md  XANYLABELING_INTEGRATION.md  claude-code-心得分享.md
docs/components/: ANNOTATION_XANYLABELING.md
docs/modules/: README.md  management_center.md  module_010.md  module_012.md  module_013.md  module_014.md  module_015.md  module_016.md  module_017.md  module_018.md  sheet-annotation_workflow.md
docs/patterns/: streamlit_output_perf.md
docs/platform/: ARCHITECTURE.md  architecture-restructure-discussion.md  labeling-independence-plan.md  (+6 more)
domain/: services.py
mcp/: README.md  config.py
scripts/: pack-electron-cache.ps1  restore-electron-cache.ps1
(+355 files in other folders)
